--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="container">
         <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
 
-          <a href="#" class="col-xl-2 col-md-4">
+          <a href="#consumidor" class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="bi bi-shop-window"></i>
               <h3>Direito do Consumidor </h3>
@@ -242,8 +242,9 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Áreas de atuação</h2>
-          <p>Direito do Consumidor</p>
+          <section id="consumidor">
+            <h2>Áreas de atuação</h2>
+            <p>Direito do Consumidor</p>
         </div>
 
         <div class="row">
@@ -275,7 +276,8 @@
           </div>
         </div>
 
-      </div>
+    </section>
+    </div>
     </section>
 
     <section id="features" class="features">
@@ -342,8 +344,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Check our Team</p>
+          <h2>Equipe</h2>
+          <p>Nossos Advogados</p>
         </div>
 
         <div class="row justify-content-center">
