--- a/index.html
+++ b/index.html
@@ -252,23 +252,28 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Assessoria e consultória</h4>
-              <p> Orientação jurídica para imobiliárias, incorporações e corretores de imóveis. </p>
+              <h4>Reclamações e Defesa do Consumidor:</h4>
+              <p> Elaboração e acompanhamento de reclamações administrativas junto aos órgãos de defesa do consumidor.
+              </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Análise de contratos imobiliários</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <h4>Análise de Contratos de Consumo</h4>
+              <p>Análise detalhada de contratos de consumo, garantindo a transparência e a legalidade das cláusulas
+                contratuais.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Assistência em contratos de locação</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <h4>Cancelamento de Contratos e Rescisões</h4>
+              <p>Orientação jurídica para consumidores que desejam cancelar contratos de serviços ou rescindir relações
+                contratuais.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
               <h4>Atuação judicial e extrajudicial</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <p>Representação em processos judiciais e extrajudiciais relacionados ao Direito do Consumidor. Busca por
+                soluções eficientes e rápidas para resolver litígios e garantir a reparação de danos.
+              </p>
             </div>
           </div>
           <div class="image col-lg-6" style='background-image: url("assets/img/shakehands.jpeg");'
@@ -297,22 +302,22 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Assessoria e consultória</h4>
-              <p> Orientação jurídica para imobiliárias, incorporações e corretores de imóveis. </p>
+              <h4>Lorem ipsum </h4>
+              <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun. </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Análise de contratos imobiliários</h4>
+              <h4>Lorem ipsum </h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Assistência em contratos de locação</h4>
+              <h4>Lorem ipsum </h4>
               <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Atuação judicial e extrajudicial</h4>
+              <h4>Lorem ipsum </h4>
               <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
             </div>
           </div>
