--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <a href="https://wa.me/5534987001492" target="_blank" class="bi-whatsapp"><i class=""></i></a>
                 <a href="https://www.instagram.com/anapzantut/" target="_blank" class="instagram"><i
                     class="bx bxl-instagram"></i></a>
-                <a href="www.linkedin.com/in/ana-paula-zantut" target="_blank" class="linkedin"><i
+                <a href="http://linkedin.com/in/ana-paula-zantut" target="_blank" class="linkedin"><i
                     class="bx bxl-linkedin"></i></a>
               </div>
             </div>
