--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
       <div class="container">
         <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
 
+          <a href="#imob" class="col-xl-2 col-md-4">
+            <div class="icon-box">
+              <i class="bi bi-houses"></i>
+              <h3>Direito Imobiliário</h3>
+            </div>
+          </a>
+
           <a href="#consumidor" class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="bi bi-shop-window"></i>
@@ -112,12 +119,7 @@
             </div>
           </a>
 
-          <a href="#imob" class="col-xl-2 col-md-4">
-            <div class="icon-box">
-              <i class="bi bi-houses"></i>
-              <h3>Direito Imobiliário</h3>
-            </div>
-          </a>
+
           <a href="#estud" class="col-xl-2 col-md-4">
             <div class="icon-box">
               <i class="bi bi-book"></i>
@@ -151,24 +153,43 @@
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <img src="assets/img/contrato_assinado.jpeg" class="img-fluid" alt="">
+
           </div>
+
+
+
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>Sobre nós:</h3>
-            <p class="fst-italic">
+
+
+
+
+
+            <p class="fst-italic" id="just">
               Escritório físico localizado em Uberlândia/MG, com atuação em todo território nacional.
             </p>
 
-            <p>
+            <p id="just">
               Especialista em direito público com pós-graduação destacada.
-              Com ênfase nas áreas de direito do consumidor, direito imobiliário e direito estudantil, oferecemos
-              suporte jurídico tanto em consultas quanto em litígios, sempre priorizando os melhores interesses do
-              cliente.
-              Nossa abordagem proativa, ética e dedicação refletem-se em soluções jurídicas eficazes e personalizadas,
-              proporcionando uma experiência diferenciada.
+
+            <p id="just">Atuação ênfase nas áreas de direito imobiliário, direito do consumidor e direito estudantil,
+              oferecemos
+              suporte jurídico consultivo e litigioso, sempre priorizando os melhores interesses do cliente.</p>
+
+            <p id="just"> Nossa abordagem proativa, ética e dedicação refletem-se em soluções jurídicas eficazes e
+              personalizadas,
+              proporcionando uma experiência individualizada e díspar.</p>
+
+            <p id="just">
+              Comprometemo-nos a proporcionar a você serviços jurídicos excepcionais, marcados pela excelência,
+              qualidade e primo
 
             </p>
 
+
+
           </div>
+
         </div>
 
       </div>
@@ -206,7 +227,7 @@
         </div>
 
         <div class="row">
-          <div class="image col-lg-6" style='background-image: url("assets/img/direitoimob2.jpeg");'
+          <div class="image col-lg-6" style='background-image: url("assets/img/Real_Estate_-Law.jpg.webp");'
             data-aos="fade-right">
           </div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
@@ -214,16 +235,22 @@
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
               <h4>Assessoria e consultória</h4>
               <p> Orientação jurídica para imobiliárias, incorporações e corretores de imóveis. </p>
+              <p>A atuação consultiva é focada na prevenção de problemas por meio de aconselhamento prévio, enquanto o
+                assessoramento envolve uma participação mais direta nas operações e procedimentos legais relacionados ao
+                setor imobiliário.</p>
+            </div>
+            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
+              <h4>Due Diligence</h4>
+              <p>Análise minuciosa de riscos, obrigações e potenciais problemas de propriedade nas transações
+                imobiliárias. Garantimos a clareza nas informações acerca de todos os aspectos legais e financeiros dos
+                negócios imobiliários.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
               <h4>Análise de contratos imobiliários</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-            </div>
-            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
-              <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Assistência em contratos de locação</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <p>Desenvolvemos e analisamos todos os tipos de contratos imobiliários, incluindo os locatícios, buscando
+                garantia e segurança aos nossos clientes.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
@@ -252,7 +279,7 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Reclamações e Defesa do Consumidor:</h4>
+              <h4>Reclamações e Defesa do Consumidor</h4>
               <p> Elaboração e acompanhamento de reclamações administrativas junto aos órgãos de defesa do consumidor.
               </p>
             </div>
@@ -302,23 +329,26 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Lorem ipsum </h4>
-              <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserun. </p>
+              <h4>Defesas Disciplinares </h4>
+              <p> Representação em processos disciplinares, ajudando a garantir que seus direitos sejam respeitados
+                durante investigações ou audiências disciplinares nas instituições de ensino. </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Lorem ipsum </h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <h4>Recursos Acadêmicos </h4>
+              <p>Recursos para contestar decisões acadêmicas injustas e ilegais.</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Lorem ipsum </h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <h4>Acesso à Educação Especial </h4>
+              <p>Serviços e suportes necessários para atender às suas necessidades individuais de aprendizado para
+                garantir acesso à educação a todos na forma legal. </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Lorem ipsum </h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <h4>Litígios contra Instituições de Ensino </h4>
+              <p>Representação estudantil em litígios em desfavor das instituições de ensino para buscar soluções legais
+                e compensações apropriadas.</p>
             </div>
           </div>
         </div>
@@ -354,65 +384,46 @@
         </div>
 
         <div class="row justify-content-center">
-
-          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/ana1.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+
+                  <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/anapzantut" target="_blank"><i class="bi bi-instagram"></i></a>
+
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Ana Paula Zantut</h4>
+                <span>OAB/MG 204.543</span>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-              </div>
-            </div>
-          </div> -->
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/ana2.jpeg" class="img-fluid" alt="">
+                <div class="social">
+
+                  <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.instagram.com/anapzantut" target="_blank"><i class="bi bi-instagram"></i></a>
+
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Ana Paula Zantut</h4>
+                <span>OAB/MG 204.543</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="400">
+              <div class="member-img">
+                <img src="assets/img/ana3.jpeg" class="img-fluid" alt="">
                 <div class="social">
 
                   <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i class="bi bi-linkedin"></i></a>
