--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
-              <h4>Assessoria e consultória</h4>
+              <h4>Assessoria e consultoria</h4>
               <p> Orientação jurídica para imobiliárias, incorporações e corretores de imóveis. </p>
               <p>A atuação consultiva é focada na prevenção de problemas por meio de aconselhamento prévio, enquanto o
                 assessoramento envolve uma participação mais direta nas operações e procedimentos legais relacionados ao
