--- a/index.html
+++ b/index.html
@@ -402,45 +402,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="assets/img/ana2.jpeg" class="img-fluid" alt="">
-                <div class="social">
 
-                  <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i class="bi bi-linkedin"></i></a>
-                  <a href="https://www.instagram.com/anapzantut" target="_blank"><i class="bi bi-instagram"></i></a>
-
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Ana Paula Zantut</h4>
-                <span>OAB/MG 204.543</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="assets/img/ana3.jpeg" class="img-fluid" alt="">
-                <div class="social">
-
-                  <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i class="bi bi-linkedin"></i></a>
-                  <a href="https://www.instagram.com/anapzantut" target="_blank"><i class="bi bi-instagram"></i></a>
-
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Ana Paula Zantut</h4>
-                <span>OAB/MG 204.543</span>
-              </div>
-            </div>
-          </div>
 
         </div>
-
-      </div>
     </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
@@ -451,10 +415,7 @@
           <h2>Contato</h2>
         </div>
 
-        <!-- <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.20376982223!2d-48.29017702441947!3d-18.92237260772503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4453b3d5dfa3b%3A0x46299532af55a048!2sTECHERS%20-%20Escola%20de%20Tecnologia!5e0!3m2!1sen!2sbr!4v1706230000622!5m2!1sen!2sbr
-            frameborder=" 0 allowfullscreen></iframe>
-        </div> -->
+
 
         <div class="row mt-5">
 
@@ -463,7 +424,11 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Endereço:</h4>
-                <p>Rua: Lorem ipsum dolor!</p>
+                <p>Rua Araxá, nº 500 </p>
+                <p>Osvaldo Rezende</p>
+                <p>Uberlândia/MG</p>
+                </p>
+                <p style="font-weight: bolder; margin-top: 10px; font: 12px;"> Atendimento com hora marcada.</p>
               </div>
 
               <div class="email">
@@ -478,7 +443,12 @@
                 <p>(34) 98700-1492</p>
               </div>
 
+
+
             </div>
+
+
+
 
           </div>
 
@@ -509,9 +479,25 @@
 
           </div>
 
+
+        </div>
+        <div class="text-center" style="margin-top:5vh;">
+          <div class="d-flex justify-content-center">
+
+            <a href="https://wa.me/5534987001492" target="_blank" id="zap2" <button class="zap">
+              <span id="zaptext">Entre em contato</span>
+              <i class="bi bi-whatsapp"></i>
+              </button>
+            </a>
+          </div>
+          <div style="display: flex; align-items: center; justify-content: center">
+            <p style="font-weight: bolder; margin-top: 20px; font-size: large;"> Atendimento
+              online
+              para todo o Brasil</p>
+          </div>
+
         </div>
 
-      </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
@@ -553,14 +539,6 @@
 
 
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Inscreva-se">
-            </form>
-
-          </div>
 
         </div>
       </div>
