--- a/index.html
+++ b/index.html
@@ -64,22 +64,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
           <li><a class="nav-link scrollto" href="#">Artigos</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a> -->
-          <!-- <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul> -->
+
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
         </ul>
@@ -150,71 +135,58 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
 
-        <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/contrato_assinado.jpeg" class="img-fluid" alt="">
+        <section id="team" class="team">
+          <div class="container" data-aos="fade-up">
+
+            <div class="row justify-content-center">
+              <div class="col-lg-4 col-md-12 d-flex align-items-stretch">
+                <div class="member" data-aos="fade-up" data-aos-delay="400">
+                  <div class="member-img">
+                    <img src="assets/img/ana1.jpeg" class="img-fluid" alt="">
+                    <div class="social">
+                      <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i
+                          class="bi bi-linkedin"></i></a>
+                      <a href="https://www.instagram.com/anapzantut" target="_blank"><i class="bi bi-instagram"></i></a>
+                    </div>
+                  </div>
+                  <div class="member-info">
+                    <h4>Ana Paula Zantut</h4>
+                    <span>OAB/MG 204.543</span>
+                    <p id="just">Especialista em direito público com pós-graduação destacada.</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-8 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+                <h3>Sobre nós:</h3>
+                <div id="textoapresentacao">
+                  <p class="fst-italic" id="just">
+                    Escritório físico localizado em Uberlândia/MG, com atuação em todo território nacional.
+                  </p>
+                  <p id="just">Atuação ênfase nas áreas de direito imobiliário, direito do consumidor e direito
+                    estudantil, oferecemos suporte jurídico consultivo e litigioso, sempre priorizando os melhores
+                    interesses do cliente.</p>
+                  <p id="just">Nossa abordagem proativa, ética e dedicação refletem-se em soluções jurídicas
+                    eficazes e personalizadas, proporcionando uma experiência individualizada e díspar.</p>
+                  <p id="just">
+                    Comprometemo-nos a proporcionar a você serviços jurídicos excepcionais, marcados pela
+                    excelência, qualidade e primo
+                  </p>
+                </div>
+              </div>
+            </div>
 
           </div>
-
-
-
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3>Sobre nós:</h3>
-
-
-
-
-
-            <p class="fst-italic" id="just">
-              Escritório físico localizado em Uberlândia/MG, com atuação em todo território nacional.
-            </p>
-
-            <p id="just">
-              Especialista em direito público com pós-graduação destacada.
-
-            <p id="just">Atuação ênfase nas áreas de direito imobiliário, direito do consumidor e direito estudantil,
-              oferecemos
-              suporte jurídico consultivo e litigioso, sempre priorizando os melhores interesses do cliente.</p>
-
-            <p id="just"> Nossa abordagem proativa, ética e dedicação refletem-se em soluções jurídicas eficazes e
-              personalizadas,
-              proporcionando uma experiência individualizada e díspar.</p>
-
-            <p id="just">
-              Comprometemo-nos a proporcionar a você serviços jurídicos excepcionais, marcados pela excelência,
-              qualidade e primo
-
-            </p>
-
-
-
-          </div>
-
-        </div>
+        </section>
 
       </div>
+    </section>
     </section><!-- End About Section -->
 
+
+
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients">
-      <!-- <div class="container" data-aos="zoom-in">
 
-        <div class="clients-slider swiper">
-          <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div> -->
-    </section><!-- End Clients Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
@@ -355,19 +327,10 @@
 
     </section>
     </div>
-    </section>
+
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <!-- <div class="section-title">
-          <h2>Services</h2>
-          <p>Check our Services</p>
-        </div> -->
-
-
-    </section><!-- End Cta Section -->
+    <!-- End Cta Section -->
 
 
 
@@ -375,37 +338,7 @@
     <!-- ======= Testimonials Section ======= -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Equipe</h2>
-          <p>Nossos Advogados</p>
-        </div>
-
-        <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="assets/img/ana1.jpeg" class="img-fluid" alt="">
-                <div class="social">
-
-                  <a href="https://linkedin.com/in/ana-paula-zantut" target="_blank"><i class="bi bi-linkedin"></i></a>
-                  <a href="https://www.instagram.com/anapzantut" target="_blank"><i class="bi bi-instagram"></i></a>
-
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Ana Paula Zantut</h4>
-                <span>OAB/MG 204.543</span>
-              </div>
-            </div>
-          </div>
-
-
-
-        </div>
-    </section><!-- End Team Section -->
+    <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -428,7 +361,7 @@
                 <p>Osvaldo Rezende</p>
                 <p>Uberlândia/MG</p>
                 </p>
-                <p style="font-weight: bolder; margin-top: 10px; font: 12px;"> Atendimento com hora marcada.</p>
+                <p style="font-weight: bolder; margin-top: 10px; font: 1px;"> Atendimento com hora marcada.</p>
               </div>
 
               <div class="email">
@@ -525,20 +458,6 @@
               </div>
             </div>
           </div>
-
-          <!-- <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Início</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div> -->
-
-
-
 
         </div>
       </div>
