--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
-          <li><a class="nav-link scrollto" href="#">Artigos</a></li>
+          <li><a class="nav-link scrollto" href="/artigos.html#irartigo">Artigos</a></li>
 
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
@@ -159,6 +159,7 @@
 
               <div class="col-lg-8 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
                 <h3>Sobre nós:</h3>
+
                 <div id="textoapresentacao">
                   <p class="fst-italic" id="just">
                     Escritório físico localizado em Uberlândia/MG, com atuação em todo território nacional.
