--- a/artigos.html
+++ b/artigos.html
@@ -62,7 +62,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active" href="/index.html">Início</a></li>
-                    <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
+                    <li><a class="nav-link scrollto" href="/index.html#about">Sobre nós</a></li>
                     <li><a class="nav-link scrollto" href="/artigos.html">Artigos</a></li>
 
                     </li>
