--- a/artigos.html
+++ b/artigos.html
@@ -141,7 +141,8 @@
 
 
         <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="/assets/img/direitoimob2.jpeg" class="card-img-top" alt="...">
+            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título do Artigo 1</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
@@ -151,7 +152,8 @@
         </div>
 
         <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="/assets/img/direitoimob2.jpeg" class="card-img-top" alt="...">
+            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título do Artigo 2</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
@@ -161,7 +163,8 @@
         </div>
 
         <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="/assets/img/direitoimob2.jpeg" class="card-img-top" alt="...">
+            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título do Artigo 3</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
@@ -171,7 +174,8 @@
         </div>
 
         <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="/assets/img/direitoimob2.jpeg" class="card-img-top" alt="...">
+            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título do Artigo 4</h5>
                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
