--- a/texto1.html
+++ b/texto1.html
@@ -61,9 +61,12 @@
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="/artigos.html">Início</a></li>
-                    <li><a class="nav-link scrollto" href="/index.html#about">Sobre nós</a></li>
-                    <li><a class="nav-link scrollto" href="/artigos.html#irartigo">Artigos</a></li>
+                    <li><a class="nav-link scrollto active"
+                            href="https://lmos0.github.io/zanut_demonstracao/index.html">Início</a></li>
+                    <li><a class="nav-link scrollto"
+                            href="https://lmos0.github.io/zanut_demonstracao/index.html#about">Sobre nós</a></li>
+                    <li><a class="nav-link scrollto"
+                            href="https://lmos0.github.io/zanut_demonstracao/artigos#irartigo">Artigos</a></li>
 
                     </li>
                     <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
