--- a/texto1.html
+++ b/texto1.html
@@ -53,7 +53,8 @@
         <div class="container d-flex align-items-center justify-content-lg-between">
             <img src="assets/img/Logo2.png" alt="" id="logo-z">
 
-            <h3 class="logo me-auto me-lg-0"><a href="index.html"><span id="zanut">Zantut Advocacia</span></a>
+            <h3 class="logo me-auto me-lg-0"><a href="https://lmos0.github.io/zanut_demonstracao/index.html"><span
+                        id="zanut">Zantut Advocacia</span></a>
             </h3>
 
             <!-- Uncomment below if you prefer to use an image logo -->
