arrumando links again

--- a/texto1.html
+++ b/texto1.html
@@ -53,8 +53,7 @@
         <div class="container d-flex align-items-center justify-content-lg-between">
             <img src="assets/img/Logo2.png" alt="" id="logo-z">
 
-            <h3 class="logo me-auto me-lg-0"><a href="https://lmos0.github.io/zanut_demonstracao/index.html"><span
-                        id="zanut">Zantut Advocacia</span></a>
+            <h3 class="logo me-auto me-lg-0"><a href="index.html"><span id="zanut">Zantut Advocacia</span></a>
             </h3>
 
             <!-- Uncomment below if you prefer to use an image logo -->
@@ -62,12 +61,9 @@
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto active"
-                            href="https://lmos0.github.io/zanut_demonstracao/index.html">Início</a></li>
-                    <li><a class="nav-link scrollto"
-                            href="https://lmos0.github.io/zanut_demonstracao/index.html#about">Sobre nós</a></li>
-                    <li><a class="nav-link scrollto"
-                            href="https://lmos0.github.io/zanut_demonstracao/artigos#irartigo">Artigos</a></li>
+                    <li><a class="nav-link scrollto active" href="index.html">Início</a></li>
+                    <li><a class="nav-link scrollto" href="index.html#about">Sobre nós</a></li>
+                    <li><a class="nav-link scrollto" href="artigos#irartigo">Artigos</a></li>
 
                     </li>
                     <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
