--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
-          <li><a class="nav-link scrollto"
-              href="#https://lmos0.github.io/zanut_demonstracao/artigos#irartigo">Artigos</a></li>
+          <li><a class="nav-link scrollto" href="artigos.html">Artigos</a></li>
 
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
