--- a/artigos.html
+++ b/artigos.html
@@ -131,45 +131,49 @@
 
     <h2 class="text-center" style="padding: 30px; text-decoration: underline;">Artigos</h2>
 
-    <div class="artigos" id="irartigo">
+    <section id="irartigo">
+        <div class="artigos">
 
 
 
 
-        <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
-                class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Título do Artigo 1</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
-                    aspernatur, </p>
-                <a href="texto1.html#artigo" class="btn btn-primary">Ler Artigo</a>
+            <div class="card text-center mx-auto" style="width: 18rem;">
+                <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Título do Artigo 1</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+                        voluptatum
+                        aspernatur, </p>
+                    <a href="texto1.html#artigo" class="btn btn-primary">Ler Artigo</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
-                class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Título do Artigo 2</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
-                    aspernatur, </p>
-                <a href="#" class="btn btn-primary">Ler Artigo</a>
+            <div class="card text-center mx-auto" style="width: 18rem;">
+                <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Título do Artigo 2</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+                        voluptatum
+                        aspernatur, </p>
+                    <a href="#" class="btn btn-primary">Ler Artigo</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card text-center mx-auto" style="width: 18rem;">
-            <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
-                class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Título do Artigo 3</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium voluptatum
-                    aspernatur, </p>
-                <a href="#" class="btn btn-primary" id="">Ler Artigo</a>
+            <div class="card text-center mx-auto" style="width: 18rem;">
+                <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Título do Artigo 3</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
+                        voluptatum
+                        aspernatur, </p>
+                    <a href="#" class="btn btn-primary" id="">Ler Artigo</a>
+                </div>
             </div>
-        </div>
 
-        <!-- <div class="card text-center mx-auto" style="width: 18rem;">
+            <!-- <div class="card text-center mx-auto" style="width: 18rem;">
             <img src="https://raw.githubusercontent.com/lmos0/zanut_demonstracao/main/assets/img/direitoimob2.jpeg"
                 class="card-img-top" alt="...">
             <div class="card-body">
@@ -180,7 +184,8 @@
             </div>
         </div> -->
 
-    </div>
+        </div>
+    </section>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
