--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
-          <li><a class="nav-link scrollto" href="artigos.html">Artigos</a></li>
+          <li><a class="nav-link scrollto" href="artigos.html#irartigo">Artigos</a></li>
 
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
