--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     eficazes e personalizadas, proporcionando uma experiência individualizada e díspar.</p>
                   <p id="just">
                     Comprometemo-nos a proporcionar a você serviços jurídicos excepcionais, marcados pela
-                    excelência, qualidade e primo
+                    excelência, qualidade e primo.
                   </p>
                 </div>
               </div>
@@ -228,7 +228,8 @@
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bi bi-circle-fill" style="font-size: 20px;"></i>
               <h4>Atuação judicial e extrajudicial</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <p>Temos expertise na atuação extrajudicial, sempre visando o custo benefício e celeridade para os nossos
+                clientes. </p>
             </div>
           </div>
         </div>
