--- a/artigos/index.html
+++ b/artigos/index.html
@@ -5,20 +5,30 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5L752CJ4');</script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <title>Ana Paula Zantut - Advocacia</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <meta
+        content="Escritório de advocacia, localizada em Uberlândia, especializado em direito imobiliário e em direito do consumidor"
+        name="description">
+    <meta
+        content="advogado direito imobiliário, advogado imobiliário uberlandia, “regularizar imovel uberlandia, due diligence imobiliária, escritório advogado imobiliario"
+        name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/Logo2.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/favicon0.png" rel="icon">
+
 
     <!-- Google Fonts -->
     <link
@@ -26,13 +36,13 @@
         rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+
+
+
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -51,7 +61,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
-            <a href="/"><img src="assets/img/Logo2.png" alt="" id="logo-z"></a>
+            <a href="/"><img src="assets/img/Logo2.png" alt="logo" id="logo-z"></a>
 
             <h3 class="logo me-auto me-lg-0"><a href="/"><span id="zanut">Zantut Advocacia</span></a>
             </h3>
@@ -61,11 +71,11 @@
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="/">Início</a></li>
+                    <li><a class="nav-link scrollto active" href="#hero">Início</a></li>
                     <li><a class="nav-link scrollto" href="/#about">Sobre nós</a></li>
                     <li><a class="nav-link scrollto" href="artigos#irartigo">Artigos</a></li>
 
-                    
+
                     <li><a class="nav-link scrollto" href="#contact">Contato</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -90,14 +100,14 @@
             <div class="container">
                 <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
 
-                    <a href="/#imob" class="col-xl-2 col-md-4">
+                    <a href="#imob" class="col-xl-2 col-md-4">
                         <div class="icon-box">
                             <i class="bi bi-houses"></i>
                             <h3>Direito Imobiliário</h3>
                         </div>
                     </a>
 
-                    <a href="/#consumidor" class="col-xl-2 col-md-4">
+                    <a href="#consumidor" class="col-xl-2 col-md-4">
                         <div class="icon-box">
                             <i class="bi bi-shop-window"></i>
                             <h3>Direito do Consumidor </h3>
@@ -105,7 +115,7 @@
                     </a>
 
 
-                    <a href="/#estud" class="col-xl-2 col-md-4">
+                    <a href="#estud" class="col-xl-2 col-md-4">
                         <div class="icon-box">
                             <i class="bi bi-book"></i>
                             <h3>Direito Estudantil</h3>
@@ -129,7 +139,7 @@
         </div>
     </section><!-- End Hero -->
 
-       <h1 class="text-center" style="padding: 30px;">Artigos</h1>
+    <h1 class="text-center" style="padding: 30px;">Artigos</h1>
 
     <section id="irartigo">
         <div class="artigos">
@@ -161,10 +171,13 @@
                                     class="card-img-top" alt="...">
                                 <div class="card-body" style="flex-grow: 1;">
                                     <h5 class="card-title">Não Transferi a Casa pro Meu Nome, e Agora?</h5>
-                                    <p class="card-text">Essa situação é muito comum no Brasil, mas saiba que tem solução. Muito brasileiros fazem negócios imobiliários e não registram da forma adequada[...]</p>
+                                    <p class="card-text">Essa situação é muito comum no Brasil, mas saiba que tem
+                                        solução. Muito brasileiros fazem negócios imobiliários e não registram da forma
+                                        adequada[...]</p>
                                 </div>
                                 <div class="card-footer mt-auto">
-                                    <a href="nao-transferi-a-casa-pro-meu-nome/#artigo" class="btn btn-primary">Ler Artigo</a>
+                                    <a href="nao-transferi-a-casa-pro-meu-nome/#artigo" class="btn btn-primary">Ler
+                                        Artigo</a>
                                 </div>
                             </div>
                         </div>
@@ -178,10 +191,13 @@
                                     class="card-img-top" alt="...">
                                 <div class="card-body" style="flex-grow: 1;">
                                     <h5 class="card-title">Como funciona o distrato de imóvel na planta?</h5>
-                                    <p class="card-text">Essa é uma pergunta comum, afinal, como funciona o distrato imobiliário com as construtoras? Quanto é possível reter do valor já pago pelo comprador?</p>
+                                    <p class="card-text">Essa é uma pergunta comum, afinal, como funciona o distrato
+                                        imobiliário com as construtoras? Quanto é possível reter do valor já pago pelo
+                                        comprador?</p>
                                 </div>
                                 <div class="card-footer mt-auto">
-                                    <a href="como-funciona-o-distrato-de-imovel-na-planta/#artigo" class="btn btn-primary">Ler Artigo</a>
+                                    <a href="como-funciona-o-distrato-de-imovel-na-planta/#artigo"
+                                        class="btn btn-primary">Ler Artigo</a>
                                 </div>
                             </div>
                         </div>
@@ -194,11 +210,15 @@
                                 <img src="https://images.pexels.com/photos/3791617/pexels-photo-3791617.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                                     class="card-img-top" alt="...">
                                 <div class="card-body" style="flex-grow: 1;">
-                                    <h5 class="card-title">Quero sair do imóvel antes do prazo final de locação, devo pagar a multa?</h5>
-                                    <p class="card-text">É muito comum nas relações locatícias que o inquilino, ou seja, a figura que está locando o imóvel, deseje desocupar o imóvel antes do prazo final contrato de locação[...] </p>
+                                    <h5 class="card-title">Quero sair do imóvel antes do prazo final de locação, devo
+                                        pagar a multa?</h5>
+                                    <p class="card-text">É muito comum nas relações locatícias que o inquilino, ou seja,
+                                        a figura que está locando o imóvel, deseje desocupar o imóvel antes do prazo
+                                        final contrato de locação[...] </p>
                                 </div>
                                 <div class="card-footer mt-auto">
-                                    <a href="quero-sair-do-imovel-antes-do-prazo-final/#artigo" class="btn btn-primary">Ler Artigo</a>
+                                    <a href="quero-sair-do-imovel-antes-do-prazo-final/#artigo"
+                                        class="btn btn-primary">Ler Artigo</a>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +267,7 @@
                         <div class="email">
                             <i class="bi bi-envelope"></i>
                             <h4>E-mail:</h4>
-                            <p> ana@zantutadvocacia.com.br</p>
+                            <p> contato@zantutadvocacia.com.br</p>
                         </div>
 
                         <div class="phone">
@@ -267,23 +287,28 @@
 
                 <div class="col-lg-8 mt-5 mt-lg-0">
 
-                 <form action="https://formsubmit.co/contato@zantutadvocacia.com.br" method="post" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Nome" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="E-mail" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Mensagem" required></textarea>
-              </div>
-              <div class="text-center"><button type="submit">Enviar</button></div>
-            </form>
+                    <form action="https://formsubmit.co/contato@zantutadvocacia.com.br" method="post"
+                        class="php-email-form">
+                        <div class="row">
+                            <div class="col-md-6 form-group">
+                                <input type="text" name="name" class="form-control" id="name" placeholder="Nome"
+                                    required>
+                            </div>
+                            <div class="col-md-6 form-group mt-3 mt-md-0">
+                                <input type="email" class="form-control" name="email" id="email" placeholder="E-mail"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="form-group mt-3">
+                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto"
+                                required>
+                        </div>
+                        <div class="form-group mt-3">
+                            <textarea class="form-control" name="message" rows="5" placeholder="Mensagem"
+                                required></textarea>
+                        </div>
+                        <div class="text-center"><button type="submit">Enviar</button></div>
+                    </form>
 
                 </div>
 
@@ -292,11 +317,10 @@
             <div class="text-center" style="margin-top:5vh;">
                 <div class="d-flex justify-content-center">
 
-                    <a href="https://wa.me/5534987001492" target="_blank" id="zap2" <button class="zap">
+                    <button class="zap">
                         <span id="zaptext">Entre em contato</span>
                         <i class="bi bi-whatsapp"></i>
-                        </button>
-                    </a>
+                    </button>
                 </div>
                 <div style="display: flex; align-items: center; justify-content: center">
                     <p style="font-weight: bolder; margin-top: 20px; font-size: large;"> Atendimento
@@ -308,10 +332,8 @@
 
     </section><!-- End Contact Section -->
 
-    </main><!-- End #main -->
-
     <!-- ======= Footer ======= -->
-     <footer id="footer">
+    <footer id="footer">
         <div class="footer-top">
             <div class="container">
                 <div id="footer-tres">
@@ -354,22 +376,34 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and <a
                 href="https://github.com/lmos0">lmos0</a>
         </div>
-        </div>
-    </footer>
-    <!-- End Footer -->
 
-    <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
+    </footer><!-- End Footer -->
+
+    <!--<div id="preloader"></div>-->
+    <!--<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i-->
+    <!--        class="bi bi-arrow-up-short"></i></a>-->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16453146386"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16453146386');
+    </script>
+
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5L752CJ4" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+
+
+
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
