--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
             <!-- ======= Testimonials Section ======= -->
             <section id="testimonials" class="testimonials">
                 <div class="container" data-aos="zoom-in">
+                    <h1>
+                        <h1><i class="bi bi-google"></i></h1>
+                    </h1>
 
                     <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                         <div class="swiper-wrapper">
@@ -356,19 +359,17 @@
                                     <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
-
-                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                    A Dra. Ana Paula é muito organizada, ágil e atenciosa, tirava as minhas dúvidas
-                                    com clareza e propriedade, me transmitindo toda a segurança que eu precisava,
-                                    contando com o diferencial do cenário evoluído da tecnologia realizando reuniões
-                                    pelos meios online. Todas estas qualidades me trouxeram luz ao momento delicado
-                                    que estava passando, sendo tudo isso a chave para uma excelente experiência de
-                                    seu trabalho impecável, sendo por todas estas razões que a recomendo sempre.
-                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                    <p>
+                                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                        A Dra. Ana Paula é muito organizada, ágil e atenciosa, tirava as minhas dúvidas
+                                        com clareza e propriedade, me transmitindo toda a segurança que eu precisava,
+                                        contando com o diferencial do cenário evoluído da tecnologia realizando reuniões
+                                        pelos meios online. Todas estas qualidades me trouxeram luz ao momento delicado
+                                        que estava passando, sendo tudo isso a chave para uma excelente experiência de
+                                        seu trabalho impecável, sendo por todas estas razões que a recomendo sempre.
+                                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                     </p>
-                                    <h1>
-                                        <h1><i class="bi bi-google"></i></h1>
-                                    </h1>
+
                                 </div>
 
                             </div><!-- End testimonial item -->
@@ -429,16 +430,16 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-item">
-                                        <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img"
-                                            alt="">
-                                        <h3>John Larson</h3>
-                                        <h4>Entrepreneur</h4>
+                                        <img src="https://lh3.googleusercontent.com/a-/ALV-UjUuAnwhNxHSOFj9hXH89SJ-DPOJhF0fzJTbmOaGLz5zuIs=w60-h60-p-rp-mo-br100"
+                                            class="testimonial-img" alt="">
+                                        <h3>Wagner Marques</h3>
+                                        <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
+                                                class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                                                class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
                                         <p>
                                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                            Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor
-                                            noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat
-                                            legam
-                                            esse veniam culpa fore nisi cillum quid.
+                                            Muito competente e atenciosa. O diferencial de aconselhamento jurídico fez
+                                            toda diferença pois além de tratar da causa em si trouxe muita segurança.
                                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                         </p>
                                     </div>
@@ -448,30 +449,29 @@
 
                             <div class="swiper-slide">
                                 <div class="testimonial-item">
-                                    <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img"
-                                        alt="">
-                                    <h3>Matt Brandon</h3>
-                                    <h4>Freelancer</h4>
-                                    <p>
+                                    <img src="https://lh3.googleusercontent.com/a/ACg8ocKliK4_zcIKX1XUoQcZVa1Es2RQQTwptmp96sQgBOc0=w60-h60-p-rp-mo-br100"
+                                        class="testimonial-img" alt="">
+                                    <h3>Andressa Gomes</h3>
+                                    <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
+                                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
+                                    <p style="text-align: center;">
                                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                        Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim
-                                        fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore
-                                        quem dolore labore illum veniam.
+                                        Muito competente e o atendimento é impecável. Resolveu meu problema muito fácil!
                                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                     </p>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="testimonial-item">
-                                        <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img"
-                                            alt="">
-                                        <h3>John Larson</h3>
-                                        <h4>Entrepreneur</h4>
-                                        <p>
+                                        <img src="https://lh3.googleusercontent.com/a-/ALV-UjUHtvZP2WjeUNuaH6LEkDk0AUGU-fNCcyFfUZYfKVLempI=w60-h60-p-rp-mo-br100"
+                                            class="testimonial-img" alt="">
+                                        <h3>Alan Amaral</h3>
+                                        <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
+                                                class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                                                class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
+                                        <p style="text-align: center;">
                                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                            Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor
-                                            noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat
-                                            legam
-                                            esse veniam culpa fore nisi cillum quid.
+                                            Agradabilíssimo o atendimento, cuidou e orientou muito bem o meu caso.
                                             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                         </p>
                                     </div>
@@ -480,18 +480,32 @@
 
                             <div class="swiper-slide">
                                 <div class="testimonial-item">
-                                    <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img"
-                                        alt="">
-                                    <h3>John Larson</h3>
-                                    <h4>Entrepreneur</h4>
-                                    <p>
+                                    <img src="https://lh3.googleusercontent.com/a/ACg8ocKJ80PqxD1GO6sm3b66giQzPWh5WRwXXfX8D8gS9qT_=w60-h60-p-rp-mo-br100"
+                                        class="testimonial-img" alt="">
+                                    <h3>Ana Paula</h3>
+                                    <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
+                                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
+                                    <p style="text-align: center;">
                                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                        Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor
-                                        noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam
-                                        esse veniam culpa fore nisi cillum quid.
+                                        Muito atenciosa e competente. Resolveu minha questão da melhor forma. Recomendo.
                                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                     </p>
                                 </div>
+                                <div class="testimonial-item">
+                                    <img src="https://lh3.googleusercontent.com/a/ACg8ocJWagBrZq-Yydgm9wmb0OsDMwGoQz-u_hddvh759AsU=w60-h60-p-rp-mo-br100"
+                                        class="testimonial-img" alt="">
+                                    <h3>Leonardo Borges</h3>
+                                    <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
+                                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
+                                            class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
+                                    <p style="text-align: center;">
+                                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                        Só tenho a agradecer o trabalho dessa Dra. Incrível
+                                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                    </p>
+                                </div>
+
                             </div><!-- End testimonial item -->
                         </div>
                         <div class="swiper-pagination"></div>
